sub_html w3c 검사 후 수정
- ul 안에 div를 넣어 오류가 있었습니다.
- ul 안에 p를 넣어 오류가 있었습니다.
- 인천소개 페이지 내용에 line-height를 32px로 올렸습니다.

--- a/sub_html/complaint.html
+++ b/sub_html/complaint.html
@@ -185,67 +185,73 @@
                     <h3>종합민원</h3>
                 </div>
                 <ul>
-                    <li class="accordion on"><a href="#" class="arrow_up">민원안내</a></li>
-                    <div class="submenu active">
-                        <ul>
-                            <li class="on"><a href="#">민원실 이용 안내</a></li>
-                            <li><a href="#">정부24(어디서나민원)</a></li>
-                            <li><a href="#">무인민원발급기</a></li>
-                            <li><a href="#">여권민원</a></li>
-                            <li><a href="#">민원소식</a></li>
-                            <li><a href="#">자동차민원<img src="../img/common/linkHttp.png" alt="외부링크"></a></li>
-                            <li><a href="#">민원편람(서식)</a></li>
-                        </ul>
-                    </div>
-                    <li class="accordion"><a href="#" class="arrow">미추홀콜센터</a></li>
-                    <div class="submenu">
-                        <ul>
-                            <li><a href="#">센터소개</a></li>
-                            <li><a href="#">오시는 길</a></li>
-                            <li><a href="#">상담안내</a></li>
-                            <li><a href="#">전화상담 예약</a></li>
-                            <li><a href="#">고마워요 120</a></li>
-                        </ul>
-                    </div>
-                    <li class="accordion"><a href="#" class="arrow">민원신청</a></li>
-                    <div class="submenu">
-                        <ul>
-                            <li><a href="#">민원상담</a></li>
-                            <li><a href="#">110 화상수화통역서비스</a></li>
-                            <li><a href="#">소상공인 불공장거래<br> 피해상담</a></li>
-                        </ul>
-                    </div>
-                    <li class="accordion"><a href="#" class="arrow">민원조회</a></li>
-                    <div class="submenu">
-                        <ul>
-                            <li><a href="#">민원상담 처리결과</a></li>
-                            <li><a href="#">방문민원 처리결과</a></li>
-                            <li><a href="#">나의신고제안보기</a></li>
-                            <li><a href="#">민원사례조회</a></li>
-                        </ul>
-                    </div>
-                    <li class="accordion"><a href="#" class="arrow">신고센터</a></li>
-                    <div class="submenu">
-                        <ul>
-                            <li><a href="#">부패·공익·부정청탁신고</a></li>
-                            <li><a href="#">예산낭비신고</a></li>
-                            <li><a href="#">안전신고<img src="../img/common/linkHttp.png" alt="외부링크"></a></li>
-                            <li><a href="#">건설부조리신고</a></li>
-                            <li><a href="#">인권침해구제</a></li>
-                            <li><a href="#">체육인 인권침해구제</a></li>
-                            <li><a href="#">일본 수출규제 피해기업 신청</a></li>
-                            <li><a href="#">불합리 규제신고<img src="../img/common/linkHttp.png" alt="외부링크"></a></li>
-                        </ul>
-                    </div>
-                    <li class="accordion"><a href="#" class="arrow">행정서비스헌장</a></li>
-                    <div class="submenu">
-                        <ul>
-                            <li><a href="#">행정서비스헌장 전문</a></li>
-                            <li><a href="#">공통이행기준</a></li>
-                            <li><a href="#">분야별 이행기준</a></li>
-                            <li><a href="#">온라인행정심판<img src="../img/common/linkHttp.png" alt="외부링크"></a></li>
-                        </ul>
-                    </div>
+                    <li class="accordion on"><a href="#" class="arrow_up">민원안내</a>
+                        <div class="submenu active">
+                            <ul>
+                                <li class="on"><a href="#">민원실 이용 안내</a></li>
+                                <li><a href="#">정부24(어디서나민원)</a></li>
+                                <li><a href="#">무인민원발급기</a></li>
+                                <li><a href="#">여권민원</a></li>
+                                <li><a href="#">민원소식</a></li>
+                                <li><a href="#">자동차민원<img src="../img/common/linkHttp.png" alt="외부링크"></a></li>
+                                <li><a href="#">민원편람(서식)</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="accordion"><a href="#" class="arrow">미추홀콜센터</a>
+                        <div class="submenu">
+                            <ul>
+                                <li><a href="#">센터소개</a></li>
+                                <li><a href="#">오시는 길</a></li>
+                                <li><a href="#">상담안내</a></li>
+                                <li><a href="#">전화상담 예약</a></li>
+                                <li><a href="#">고마워요 120</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="accordion"><a href="#" class="arrow">민원신청</a>
+                        <div class="submenu">
+                            <ul>
+                                <li><a href="#">민원상담</a></li>
+                                <li><a href="#">110 화상수화통역서비스</a></li>
+                                <li><a href="#">소상공인 불공장거래<br> 피해상담</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="accordion"><a href="#" class="arrow">민원조회</a>
+                        <div class="submenu">
+                            <ul>
+                                <li><a href="#">민원상담 처리결과</a></li>
+                                <li><a href="#">방문민원 처리결과</a></li>
+                                <li><a href="#">나의신고제안보기</a></li>
+                                <li><a href="#">민원사례조회</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="accordion"><a href="#" class="arrow">신고센터</a>
+                        <div class="submenu">
+                            <ul>
+                                <li><a href="#">부패·공익·부정청탁신고</a></li>
+                                <li><a href="#">예산낭비신고</a></li>
+                                <li><a href="#">안전신고<img src="../img/common/linkHttp.png" alt="외부링크"></a></li>
+                                <li><a href="#">건설부조리신고</a></li>
+                                <li><a href="#">인권침해구제</a></li>
+                                <li><a href="#">체육인 인권침해구제</a></li>
+                                <li><a href="#">일본 수출규제 피해기업 신청</a></li>
+                                <li><a href="#">불합리 규제신고<img src="../img/common/linkHttp.png" alt="외부링크"></a></li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="accordion"><a href="#" class="arrow">행정서비스헌장</a>
+                        <div class="submenu">
+                            <ul>
+                                <li><a href="#">행정서비스헌장 전문</a></li>
+                                <li><a href="#">공통이행기준</a></li>
+                                <li><a href="#">분야별 이행기준</a></li>
+                                <li><a href="#">온라인행정심판<img src="../img/common/linkHttp.png" alt="외부링크"></a></li>
+                            </ul>
+                        </div>
+                    </li>
                 </ul>
             </div>
             <!-- content -->
