--- a/sub_html/introduce.html
+++ b/sub_html/introduce.html
@@ -183,71 +183,77 @@
                     <h3>인천소개</h3>
                 </div>
                 <ul>
-                    <li class="accordion on"><a href="#" class="arrow_up">인천안내</a></li>
-                    <div class="submenu active">
-                        <ul>
-                            <li class="on"><a href="#">기본현황</a></li>
-                            <li><a href="#">행정구역</a></li>
-                            <li><a href="#">인천상징</a></li>
-                            <li><a href="#">인천색<img src="../img/common/linkHttp.png" alt="외부링크"></a></li>
-                            <li><a href="#">인천노래</a></li>
-                            <li><a href="#">미디어로 보는 인천</a></li>
-                            <li><a href="#">역대시장</a></li>
-                            <li><a href="#">시민상</a></li>
-                        </ul>
-                    </div>
-                    <li class="accordion"><a href="#" class="arrow">시청안내</a></li>
-                    <div class="submenu">
-                        <ul>
-                            <li><a href="#">조직도</a></li>
-                            <li><a href="#">직원/담당업무</a></li>
-                            <li><a href="#">전화번호/팩스번호 안내</a></li>
-                            <li><a href="#">중앙협력본부 안내</a></li>
-                            <li><a href="#">부서위치안내</a></li>
-                            <li><a href="#">주차장 이용안내</a></li>
-                            <li><a href="#">찾아오시는 길</a></li>
-                            <li><a href="#">시설물 대관 안내</a></li>
-                        </ul>
-                    </div>
-                    <li class="accordion"><a href="#" class="arrow">인천역사</a></li>
-                    <div class="submenu">
-                        <ul>
-                            <li><a href="#">유래와 연혁</a></li>
-                            <li><a href="#">시대별 역사</a></li>
-                            <li><a href="#">인천설화</a></li>
-                            <li><a href="#">지명유래</a></li>
-                            <li><a href="#">인천인물</a></li>
-                            <li><a href="#">사진으로 보는 역사</a></li>
-                            <li><a href="#">오늘의 역사</a></li>
-                            <li><a href="#">역사자료실</a></li>
-                            <li><a href="#">역사자료관</a></li>
-                        </ul>
-                    </div>
-                    <li class="accordion"><a href="#" class="arrow">賞賞인천</a></li>
-                    <div class="submenu">
-                        <ul>
-                            <li><a href="#">기관표창</a></li>
-                            <li><a href="#">표창추천 및 후보자 공개검증</a></li>
-                        </ul>
-                    </div>
-                    <li class="accordion"><a href="#" class="arrow">행정자료실</a></li>
-                    <div class="submenu">
-                        <ul>
-                            <li><a href="#">행정자료실 이용안내</a></li>
-                            <li><a href="#">도서목록</a></li>
-                        </ul>
-                    </div>
-                    <li class="accordion"><a href="#" class="arrow">국제교류</a></li>
-                    <div class="submenu">
-                        <ul>
-                            <li><a href="#">자매도시</a></li>
-                            <li><a href="#">우호도시</a></li>
-                            <li><a href="#">국제기구 소개</a></li>
-                            <li><a href="#">국제기구 소식</a></li>
-                            <li><a href="#">교류정보</a></li>
-                            <li><a href="#">해외도시 교류사진전</a></li>
-                        </ul>
-                    </div>
+                    <li class="accordion on"><a href="#" class="arrow_up">인천안내</a>
+                        <div class="submenu active">
+                            <ul>
+                                <li class="on"><a href="#">기본현황</a></li>
+                                <li><a href="#">행정구역</a></li>
+                                <li><a href="#">인천상징</a></li>
+                                <li><a href="#">인천색<img src="../img/common/linkHttp.png" alt="외부링크"></a></li>
+                                <li><a href="#">인천노래</a></li>
+                                <li><a href="#">미디어로 보는 인천</a></li>
+                                <li><a href="#">역대시장</a></li>
+                                <li><a href="#">시민상</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="accordion"><a href="#" class="arrow">시청안내</a>
+                        <div class="submenu">
+                            <ul>
+                                <li><a href="#">조직도</a></li>
+                                <li><a href="#">직원/담당업무</a></li>
+                                <li><a href="#">전화번호/팩스번호 안내</a></li>
+                                <li><a href="#">중앙협력본부 안내</a></li>
+                                <li><a href="#">부서위치안내</a></li>
+                                <li><a href="#">주차장 이용안내</a></li>
+                                <li><a href="#">찾아오시는 길</a></li>
+                                <li><a href="#">시설물 대관 안내</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="accordion"><a href="#" class="arrow">인천역사</a>
+                        <div class="submenu">
+                            <ul>
+                                <li><a href="#">유래와 연혁</a></li>
+                                <li><a href="#">시대별 역사</a></li>
+                                <li><a href="#">인천설화</a></li>
+                                <li><a href="#">지명유래</a></li>
+                                <li><a href="#">인천인물</a></li>
+                                <li><a href="#">사진으로 보는 역사</a></li>
+                                <li><a href="#">오늘의 역사</a></li>
+                                <li><a href="#">역사자료실</a></li>
+                                <li><a href="#">역사자료관</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="accordion"><a href="#" class="arrow">賞賞인천</a>
+                        <div class="submenu">
+                            <ul>
+                                <li><a href="#">기관표창</a></li>
+                                <li><a href="#">표창추천 및 후보자 공개검증</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="accordion"><a href="#" class="arrow">행정자료실</a>
+                        <div class="submenu">
+                            <ul>
+                                <li><a href="#">행정자료실 이용안내</a></li>
+                                <li><a href="#">도서목록</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="accordion"><a href="#" class="arrow">국제교류</a>
+                        <div class="submenu">
+                            <ul>
+                                <li><a href="#">자매도시</a></li>
+                                <li><a href="#">우호도시</a></li>
+                                <li><a href="#">국제기구 소개</a></li>
+                                <li><a href="#">국제기구 소식</a></li>
+                                <li><a href="#">교류정보</a></li>
+                                <li><a href="#">해외도시 교류사진전</a></li>
+                            </ul>
+                        </div>
+                    </li>
                 </ul>
             </div>
             <!-- content -->
