--- a/sub_html/join.html
+++ b/sub_html/join.html
@@ -189,55 +189,60 @@
                 <ul>
                     <li><a href="#">제안/청원/토론<img src="../img/common/linkHttp.png" alt="외부링크"></a></li>
                     <li><a href="#">주민참여예산<img src="../img/common/linkHttp.png" alt="외부링크"></a></li>
-                    <li class="accordion on"><a href="#" class="arrow_up">비영리단체</a></li>
-                    <div class="submenu active">
-                        <ul>
-                            <li class="on"><a href="#">비영리단체되기</a></li>
-                            <li><a href="#">비영리단체 회원</a></li>
-                            <li><a href="#">비영리단체 메뉴 이용 신청</a></li>
-                            <li><a href="#">공익활동지원사업</a></li>
-                            <li><a href="#">비영리단체 사랑방</a></li>
-                            <li><a href="#">자료실</a></li>
-                        </ul>
-                    </div>
-                    <li class="accordion"><a href="#" class="arrow">스마트도시 리빙랩</a></li>
-                    <div class="submenu">
-                        <ul>
-                            <li><a href="#">스마트도시 리빙랩 소개</a></li>
-                            <li><a href="#">시민참여계획</a></li>
-                            <li><a href="#">시민활동현황</a></li>
-                            <li><a href="#">관련자료실</a></li>
-                        </ul>
-                    </div>
-                    <li class="accordion"><a href="#" class="arrow">시민의소리</a></li>
-                    <div class="submenu">
-                        <ul>
-                            <li><a href="#">자유게시판</a></li>
-                            <li><a href="#">칭찬합시다</a></li>
-                        </ul>
-                    </div>
+                    <li class="accordion on"><a href="#" class="arrow_up">비영리단체</a>
+                        <div class="submenu active">
+                            <ul>
+                                <li class="on"><a href="#">비영리단체되기</a></li>
+                                <li><a href="#">비영리단체 회원</a></li>
+                                <li><a href="#">비영리단체 메뉴 이용 신청</a></li>
+                                <li><a href="#">공익활동지원사업</a></li>
+                                <li><a href="#">비영리단체 사랑방</a></li>
+                                <li><a href="#">자료실</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="accordion"><a href="#" class="arrow">스마트도시 리빙랩</a>
+                        <div class="submenu">
+                            <ul>
+                                <li><a href="#">스마트도시 리빙랩 소개</a></li>
+                                <li><a href="#">시민참여계획</a></li>
+                                <li><a href="#">시민활동현황</a></li>
+                                <li><a href="#">관련자료실</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="accordion"><a href="#" class="arrow">시민의소리</a>
+                        <div class="submenu">
+                            <ul>
+                                <li><a href="#">자유게시판</a></li>
+                                <li><a href="#">칭찬합시다</a></li>
+                            </ul>
+                        </div>
+                    </li>
                     <li><a href="#">설문조사<img src="../img/common/linkHttp.png" alt="외부링크"></a></li>
                     <li><a href="#">이벤트<img src="../img/common/linkHttp.png" alt="외부링크"></a></li>
-                    <li class="accordion"><a href="#" class="arrow">문자알림서비스</a></li>
-                    <div class="submenu">
-                        <ul>
-                            <li><a href="#">인천알리미<img src="../img/common/linkHttp.png" alt="외부링크"></a></li>
-                            <li><a href="#">맞춤형시정정보</a></li>
-                            <li><a href="#">대기환경정보<img src="../img/common/linkHttp.png" alt="외부링크"></a></li>
-                            <li><a href="#">주정차 위반 단속<img src="../img/common/linkHttp.png" alt="외부링크"></a></li>
-                        </ul>
-                    </div>
+                    <li class="accordion"><a href="#" class="arrow">문자알림서비스</a>
+                        <div class="submenu">
+                            <ul>
+                                <li><a href="#">인천알리미<img src="../img/common/linkHttp.png" alt="외부링크"></a></li>
+                                <li><a href="#">맞춤형시정정보</a></li>
+                                <li><a href="#">대기환경정보<img src="../img/common/linkHttp.png" alt="외부링크"></a></li>
+                                <li><a href="#">주정차 위반 단속<img src="../img/common/linkHttp.png" alt="외부링크"></a></li>
+                            </ul>
+                        </div>
+                    </li>
                     <li><a href="#">공모전<img src="../img/common/linkHttp.png" alt="외부링크"></a></li>
-                    <li class="accordion"><a href="#" class="arrow">인천愛뜰 사용허가<br> 신청</a></li>
-                    <div class="submenu">
-                        <ul>
-                            <li><a href="#">인천愛뜰 소개</a></li>
-                            <li><a href="#">인천愛뜰 사용허가 절차</a></li>
-                            <li><a href="#">인천愛뜰 사용허가 신청</a></li>
-                            <li><a href="#">허가조건/유의사항</a></li>
-                            <li><a href="#">행사일정</a></li>
-                        </ul>
-                    </div>
+                    <li class="accordion"><a href="#" class="arrow">인천愛뜰 사용허가<br> 신청</a>
+                        <div class="submenu">
+                            <ul>
+                                <li><a href="#">인천愛뜰 소개</a></li>
+                                <li><a href="#">인천愛뜰 사용허가 절차</a></li>
+                                <li><a href="#">인천愛뜰 사용허가 신청</a></li>
+                                <li><a href="#">허가조건/유의사항</a></li>
+                                <li><a href="#">행사일정</a></li>
+                            </ul>
+                        </div>
+                    </li>
                     <li><a href="#">대학생아르바이트</a></li>
                     <li><a href="#">생생시정견학</a></li>
                     <li><a href="#">대학생<br>학자금대출이자지원<br>신청</a></li>
@@ -316,8 +321,7 @@
                         <!-- text_list_wrap -->
                         <ul class="text_list_wrap">
                             <li class="text_list">중앙행정기관 등록대상이 아닌 단체</li>
-                            <li class="text_list">단체의 사무소가 소재하는 특별시장, 광역시장, 도지사에게 등록</li>
-                            <p class="text">※등록기관 판단요령</p>
+                            <li class="text_list">단체의 사무소가 소재하는 특별시장, 광역시장, 도지사에게 등록<br>※등록기관 판단요령</li>
                             <li class="text_list">회칙(정관)에 기재된 목적 및 사업내용을 확인하여 등록기관을 판단하되, 단체의 활동범위가 어느 기관인지 불분명할 때에는
                                 정부조직법상의 직무범위를 기준으로 판단</li>
                             <li class="text_list">주된 사업이 여러 기관에 혼재되어 있는 경우에는 목적사업의 우선순위와 중요도에 따라 판단</li>
