--- a/sub_html/news.html
+++ b/sub_html/news.html
@@ -185,23 +185,27 @@
                 <ul>
                     <li class="on"><a href="#">새소식</a></li>
                     <li><a href="#">주요행사정보</a></li>
-                    <li class="accordion"><a href="#" class="arrow">보도/해명</a></li>
-                    <div class="submenu">
-                        <ul>
-                            <li><a href="#">보도자료</a></li>
-                            <li><a href="#">바로잡습니다.</a></li>
-                        </ul>
-                    </div>
-                    <li class="accordion"><a href="#" class="arrow">고시/공고/시보</a></li>
-                    <div class="submenu">
-                        <ul>
-                            <li><a href="http://www.naver.com">고시공고<img src="../img/common/linkHttp.png" alt="외부링크"></a>
-                            </li>
-                            <li><a href="#">인천시보</a></li>
-                            <li><a href="#">반상회보</a></li>
-                            <li><a href="#">입법예고<img src="../img/common/linkHttp.png" alt="외부링크"></a></li>
-                        </ul>
-                    </div>
+                    <li class="accordion"><a href="#" class="arrow">보도/해명</a>
+                        <div class="submenu">
+                            <ul>
+                                <li><a href="#">보도자료</a></li>
+                                <li><a href="#">바로잡습니다.</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="accordion"><a href="#" class="arrow">고시/공고/시보</a>
+                        <div class="submenu">
+                            <ul>
+                                <li><a href="http://www.naver.com">고시공고<img src="../img/common/linkHttp.png"
+                                            alt="외부링크"></a>
+                                </li>
+                                <li><a href="#">인천시보</a></li>
+                                <li><a href="#">반상회보</a></li>
+                                <li><a href="#">입법예고<img src="../img/common/linkHttp.png" alt="외부링크"></a></li>
+                            </ul>
+                        </div>
+                    </li>
+
                     <li><a href="#">미디어허브</a></li>
                     <li><a href="#">카드뉴스</a></li>
                 </ul>
