이미지 개선, 슬라이드 스크립트 교체
1. 기존의 인천광역시 홈페이지 하단 이미지 사이즈가 보여지는 영역과 달라 눌리는 현상이 있습니다. 이를 보완하기 위해 다른 이미지를 포토샵으로 크기를 알맞게 편집하여 심미성을 향상 시켰습니다.

2. 스와이퍼 슬라이드 이슈를 개선하려고 했으나 아직 탭 버튼 이동 시 자동재생이 되지 않습니다. 다시 내일 교체할 예정 입니다.

--- a/index.html
+++ b/index.html
@@ -243,17 +243,6 @@
                                 <div class="swiper-button-prev">
                                     <img src="./img/main/slider-arrow-left.png" alt="왼쪽버튼">
                                 </div>
-                                <!-- swiper btn wrap -->
-                                <div class="swiper_btn_wrap first_btn">
-                                    <span>주요알림</span>
-                                    <div class="swiper-pagination"></div>
-                                    <div class="swiper-button-play first-play">
-                                        <img src="./img/main/play.png" alt="재생버튼">
-                                    </div>
-                                </div>
-                                <div class="swiper_btn_wrap second_btn">
-                                    <span>시민참여</span>
-                                </div>
                             </div>
                         </div>
                         <!-- first slider_area end -->
@@ -288,16 +277,24 @@
                                 <div class="swiper-button-prev second-prev">
                                     <img src="./img/main/slider-arrow-left.png" alt="왼쪽버튼">
                                 </div>
-                                <!-- swiper btn wrap -->
-                                <div class="swiper_btn_wrap first_btn">
-                                    <span>주요알림</span>
+                            </div>
+                        </div>
+                        <!-- swiper btn wrap -->
+                        <div class="swiper_btn_wrap">
+                            <div class="swiper_btn first_btn">
+                                <div class="triangle"></div>
+                                <span>주요알림</span>
+                                <div class="swiper-pagination first-pagination"></div>
+                                <div class="swiper-button-play first-play">
+                                    <img src="./img/main/play.png" alt="재생버튼">
                                 </div>
-                                <div class="swiper_btn_wrap second_btn">
-                                    <span>시민참여</span>
-                                    <div class="swiper-pagination second-pagination"></div>
-                                    <div class="swiper-button-play second-play">
-                                        <img src="./img/main/play.png" alt="재생버튼">
-                                    </div>
+                            </div>
+                            <div class="swiper_btn second_btn">
+                                <div class="triangle"></div>
+                                <span>시민참여</span>
+                                <div class="swiper-pagination second-pagination"></div>
+                                <div class="swiper-button-play second-play">
+                                    <img src="./img/main/play.png" alt="재생버튼">
                                 </div>
                             </div>
                         </div>
@@ -613,14 +610,15 @@
                     <div class="content">
                         <div class="list">
                             <a href="#">
-                                <img src="./img/main/media01.jpg" alt="전시사진을 보고있는 사람들">
+                                <img src="./img/main/media01.png" alt="전시사진을 보고있는 사람들">
                                 <span>인천시 인터넷방송 포토인천</span>
                             </a>
                         </div>
                         <div class="list">
                             <a href="#">
-                                <img src="./img/main/media02.jpg" alt="아이디어 반짝 업사이클 제품">
-                                <span>인천 i-view 인터넷 신문</span>
+                                <img src="./img/main/media02.png"
+                                    alt="인천시 인터넷신문 i-View 객원기자 모집 청년대학생 다문화 일반 사진영상 합격자 발표">
+                                <span>i-view 인터넷 신문 객원기자 모집</span>
                             </a>
                         </div>
                         <div class="list">
@@ -724,12 +722,14 @@
                 </div>
             </div>
         </div>
+        <!-- fbottom -->
         <div class="fbottom inner">
             <!-- fb_top -->
             <div class="fb_top">
                 <div class="footer_logo">
                     <h2><a href="./index.html"><img src="./img/common/footer_logo.png" alt="인천광역시"></a></h2>
                 </div>
+                <!-- fb_menu -->
                 <div class="fb_menu">
                     <ul>
                         <li><a href="#">누리집 이용안내</a></li>
@@ -740,6 +740,7 @@
                         <li><a href="#">누리집 안내지도</a></li>
                     </ul>
                 </div>
+                <!-- fb_link_img -->
                 <div class="fb_link_img">
                     <a href="#"><img src="./img/common/callcenter.png" alt="120 궁금할 땐 언제나 미추홀콜센터"></a>
                     <a href="#"><img src="./img/common/webaccessibility.png" alt="과학기술정보통신부 webaccessibility"></a>
