--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>인천광역시</title>
     <meta name="description" content="인천광역시">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./css/initial.css">
@@ -225,13 +225,13 @@
                                     <div class="swiper-slide">
                                         <a href="#">
                                             <img src="./img/main/banner02.jpg"
-                                                alt="인천광역시 최초 국가 생태관광지역 인천시 백령도 하늬해변(점박이물범 집단서식지)과 진촌리 마을이 '국가 생태관광지역'으로 성정됐습니다.">
+                                                alt="수도권 사회적 거리두기 2단계 연장 시행 적용기간 : 2021.5.24.(월) 0시 ~ 6.13.(일) 24시까지 (사적모임) 전국 '5인이상 사적모임 금지' 조치 유지 (유흥시설) 수도권 집합금지 조치 유지 운영시간 제한없음 영화관, PC방, 오락실, 학원, 독서실, 놀이공원, 이미용업, 대형마트 22시까지 운영제한 실내체육시설, 노래연습장, 목욕장업, 방문판매 등 직접판매홍보관, 파티룸, 실내스탠딩 공연장 집함금지 유흥시설 5종 (무도장 포함) 및 홀덤펍, 홀덤게임장 행사인원 제한 100명미만 종교활동 정규예배 등 20% 이내 (모임, 식사, 숙박 금지)">
                                         </a>
                                     </div>
                                     <div class="swiper-slide">
                                         <a href="#">
                                             <img src="./img/main/banner03.jpg"
-                                                alt="인천광역시 최초 국가 생태관광지역 인천시 백령도 하늬해변(점박이물범 집단서식지)과 진촌리 마을이 '국가 생태관광지역'으로 성정됐습니다.">
+                                                alt="인천시립박물관, 미술관 건립 인천 뮤지엄 파크 행안부 지방재정투자심사 통과 전국 최초 복합문화예술단지 본격 건립 국비 200억 확보">
                                         </a>
                                     </div>
                                 </div>
@@ -253,19 +253,19 @@
                                     <div class="swiper-slide">
                                         <a href="#">
                                             <img src="./img/main/banner12.jpg"
-                                                alt="인천광역시 최초 국가 생태관광지역 인천시 백령도 하늬해변(점박이물범 집단서식지)과 진촌리 마을이 '국가 생태관광지역'으로 성정됐습니다.">
+                                                alt="2021년 하계 대학생 아르바이트 모집 모집기간 2021.6.10.(목) ~ 6.18.(금) 18시 까지 ※ 신청기간 동안은 서류제출 받지 않아요!!">
                                         </a>
                                     </div>
                                     <div class="swiper-slide">
                                         <a href="#">
                                             <img src="./img/main/banner13.jpg"
-                                                alt="인천광역시 최초 국가 생태관광지역 인천시 백령도 하늬해변(점박이물범 집단서식지)과 진촌리 마을이 '국가 생태관광지역'으로 성정됐습니다.">
+                                                alt="행복한 시민 살기 좋은 도시 스마트 인천 시민의 생각으로 만드는 똑똑한 인천 인천 시민들과 함께하는 스마트 아이디어 투표해주세요 주최 인천광역시 주관 인천스마트 시티 인천시민의 반짝이는 아이디어가 인천시 정책으로 연계, 실현될 수 있도록 공감 아이디어 5개를 투표해주세요 투표기간 2021.6.9.(수)~6.16.(수) 18:00까지 참여혜택 아이스 아메리카노 1잔 (50여명) ※ 2021년 6월 중 SMS발송 문의 인천스마트시티(주) 032-458-5700">
                                         </a>
                                     </div>
                                     <div class="swiper-slide">
                                         <a href="#">
                                             <img src="./img/main/banner14.jpg"
-                                                alt="인천광역시 최초 국가 생태관광지역 인천시 백령도 하늬해변(점박이물범 집단서식지)과 진촌리 마을이 '국가 생태관광지역'으로 성정됐습니다.">
+                                                alt="인천과 함께한 당신을 기억합니다 추모(追慕)기사 신청하세요 인천광역시, 지역신문 공동 캠페인 고인의 넋을 추모하고, 유족에게 고인과의 특별하고 뜻깊은 마지막 추억을 선사하고자 인천광역시가 주요 지역신문과 협업하여 추모기사 게재사업 공동캠페인을 진행하오니 시민 여러분들의 많은 관심과 신청을 바랍니다. 신청기한_고인이 사망 후 15일 이내 신청대상_인천시민 또는 인천과 연고(직장, 거주 등)가 있는 분">
                                         </a>
                                     </div>
                                 </div>
@@ -286,7 +286,7 @@
                                 <span>주요알림</span>
                                 <div class="swiper-pagination first-pagination"></div>
                                 <div class="swiper-button-play first-play">
-                                    <img src="./img/main/play.png" alt="재생버튼">
+                                    <img class="first_play_img" src="./img/main/play.png" alt="재생버튼">
                                 </div>
                             </div>
                             <div class="swiper_btn second_btn">
@@ -294,7 +294,7 @@
                                 <span>시민참여</span>
                                 <div class="swiper-pagination second-pagination"></div>
                                 <div class="swiper-button-play second-play">
-                                    <img src="./img/main/play.png" alt="재생버튼">
+                                    <img class="second_play_img" src="./img/main/play.png" alt="재생버튼">
                                 </div>
                             </div>
                         </div>
