--- a/sub_html/introduce.html
+++ b/sub_html/introduce.html
@@ -6,7 +6,7 @@
     <title>인천소개</title>
     <meta name="description" content="인천소개">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="../css/initial.css">
