--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <div id="logo">
                     <h1>
                         <a href="./index.html">
-                            <img src="./img/main/header_logo.png" alt="">
+                            <img src="./img/main/header_logo.png" alt="인천광역시 로고">
                         </a>
                     </h1>
                 </div>
@@ -407,7 +407,7 @@
                             <li><a href="#"><span>[지역균형뉴딜 우수사업 공모 국민투표] 인천광역시 "디지털트윈, 상상을 현실로
                                         만들다!"</span><span>2021-06-10</span></a></li>
                             <li><a href="#"><span>
-                                        <기회를 잡자!> 제3회 대학(원)생 아이디어 소논문 공모전
+                                &#60;기회를 잡자!&#62; 제3회 대학(원)생 아이디어 소논문 공모전
                                     </span><span>2021-06-10</span></a></li>
                         </ul>
                     </div>
