--- a/sub_html/news.html
+++ b/sub_html/news.html
@@ -35,7 +35,7 @@
                 <div id="logo">
                     <h1>
                         <a href="./index.html">
-                            <img src="../img/main/header_logo.png" alt="">
+                            <img src="../img/main/header_logo.png" alt="인천광역시 로고">
                         </a>
                     </h1>
                 </div>
